--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 
   <title>Sujeito Programador - Meu portfolio</title>
 </head>
@@ -25,13 +26,16 @@
       <li>
         <a href="#projetos">Projetos</a>
       </li>
+      <li>
+        <a href="#contato">Contato</a>
+      </li>
     </ul>
   </nav>
   <!-- FIM HEADER -->
 
   <!-- INICIO MAIN -->
-  <section id="home" class="main">
-    <div>
+  <section id="home" style="height: 600px;" class="main">
+    <div style="margin-top: 120px; margin-left: 50px;">
       <h1>Olá,<br>Seja bem vindo</h1>
       <p>Crie soluções para seu negócio!</p>
       <a href="#projetos">
@@ -61,20 +65,49 @@
     <h2>Meus projetos</h2>
     <p>Conheça meus últimos projetos</p>
 
-    <div class="project-list">
-      <img src="" alt="Foto do projeto 1">
-      <img src="" alt="Foto do projeto 2">
-      <img src="" alt="Foto do projeto 3">
+    <section style="display: flex; justify-content: center; align-items:center; flex-direction: column;">
+    <div style="display: flex; justify-content: center; align-items:center" class="project-list">
+      <img src="./images/projeto1.png" alt="Foto do projeto 1">
+      <img src="./images/projeto2.png" alt="Foto do projeto 2">
+      <img src="./images/projeto3.png" alt="Foto do projeto 3">
     </div>
 
-    <div>
-      <img src="" alt="Foto do projeto 2">
-      <img src="" alt="Foto do projeto 1">
-      <img src="" alt="Foto do projeto 3">
+    <div style="display: flex; justify-content: center; align-items:center">
+      <img src="./images/projeto1.png" alt="Foto do projeto 1">
+      <img src="./images/projeto2.png" alt="Foto do projeto 2">
+      <img src="./images/projeto3.png" alt="Foto do projeto 3">
     </div>
-
-    <button >Faça um orçamento</button>
   </section>
+
+  <a href="#contato" id="contato" type="submit" class="btn" style="display: flex; justify-content: center; align-items: center; text-align: center;"><p style="margin-top: 35px;">Fazer um Orçamento</p></a>
+    
+  </section>
+  <section style="display: flex; justify-content: center; align-items: center;">
+  <div class="wrapper" style="background-color: black; display: flex; justify-content: center; align-items: center;">
+    <form action="" method="post">
+      <h2>Deixe seu contato:</h2>
+      <div class="input-box">
+        <input type="text" placeholder="Nome Completo" required />
+        <i class="bx bxs-user"></i>
+      </div>
+      <div class="input-box">
+        <input type="email" placeholder="E-mail" required />
+        <i class="bx bx-envelope"></i>
+      </div>
+      <div class="input-box">
+        <input type="tel" placeholder="Telefone" required />
+        <i class="bx bxs-phone"></i>
+      </div>
+
+      <div class="notification">
+        <label><input type="checkbox" />Receber notificações no e-mail</label>
+      </div>
+
+      <button type="submit" class="btn">Enviar</button>
+    </form>
+  </div>
+</section>
+
   <!-- FIM PROJETOS -->
 
   <!-- INICIO RODAPE -->
